src/test/ui/array-slice-vec/slice-2.stderr
error[E0608]: cannot index into a value of type `Foo`
  --> $DIR/slice-2.rs:7:6
   |
LL |     &x[..];
   |      ^^^^^

error[E0608]: cannot index into a value of type `Foo`
  --> $DIR/slice-2.rs:8:6
   |
LL |     &x[Foo..];
   |      ^^^^^^^^

error[E0608]: cannot index into a value of type `Foo`
  --> $DIR/slice-2.rs:9:6
   |
LL |     &x[..Foo];
   |      ^^^^^^^^

error[E0608]: cannot index into a value of type `Foo`
  --> $DIR/slice-2.rs:10:6
   |
LL |     &x[Foo..Foo];
   |      ^^^^^^^^^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0608`.
